# deseq2_amaranth_hypochondriacus_caudatus

./: .gitignore  .gitkeep  LICENSE  README.md  pyproject.toml
R_code/: R_dds.ipynb
notebooks/: PCA_plot.ipynb  analysis.ipynb  boxplot_most_expressed_DEGs.ipynb  desc_stats.ipynb  go_enrichment_species.ipynb  paths.py  preprocessing.ipynb  train_model.ipynb
utils/: utils.py
