[tool.poetry]
name = "deseq2-amaranth"
version = "0.1.0"
description = ""
authors = ["Carlotta Sehl <carlotta.sehl@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "utils"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ipython = "8.27.0"
jupyter = "1.1.1"
ipykernel = "6.29.5"
pydeseq2 = "0.4.11"
seaborn = "0.13.2"
sanpy = "0.12.0"
scanpy = "1.10.3"
numpy = "2.0.0"
matplotlib = "3.9.2"
goatools = "1.4.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
